Changed the docker image url.
The image will be fetched from the official docker io page

--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -28,7 +28,7 @@ spec:
     spec:
       containers:
       - name: hello-world
-        image: localhost:5000/hello_world:v1
+        image: docker.io/ftamas/hello_world:v2
         ports:
         - containerPort: 80
           name: api
