--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
       - name: hello-world
-        image: docker.io/ftamas/hello_world:v2
+        image: docker.io/ftamas/hello_world_service:v3
         ports:
         - containerPort: 80
           name: api
