--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -1,3 +1,33 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: hello-world
+  labels:
+    app: hello-world
+spec:
+  ports:
+    - port: 80
+      targetPort: 80
+      name: api
+  selector:
+    app: hello-world
+  clusterIP: None
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: hello-world
+  labels:
+    app: hello-world
+spec:
+  ports:
+    - port: 80
+      targetPort: 80
+      name: api
+  selector:
+    app: hello-world
+  clusterIP: None
+---
 apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
