--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -1,36 +1,28 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: hello-world
-  labels:
-    app: hello-world
-spec:
-  ports:
-    - port: 80
-      targetPort: 80
-      name: api
-  selector:
-    app: hello-world
-  clusterIP: None
-  
----
-
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: hello-world
   labels:
-    app: hello-world
+    app: nginx
+  name: nginx-deployment
 spec:
-  replicas: 2
+  replicas: 3
+  selector:
+    matchLabels:
+      app: nginx
   template:
     metadata:
       labels:
-        app: hello-world
+        app: nginx
     spec:
       containers:
-      - name: hello-world
-        image: docker.io/ftamas/hello_world_service:v3
-        ports:
-        - containerPort: 80
-          name: api
+        - image: gcr.io/my-images/nginx
+          name: nginx
+          ports:
+            - containerPort: 80
+          volumeMounts:
+            - mountPath: /opt/config
+              name: my-config-map
+      volumes:
+        - configMap:
+            name: configmap
+          name: my-config-map
