--- a/manifests/service.yml
+++ b/manifests/service.yml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: hello-world
+  namespace: '${ parameters.namespace }'
   labels:
     app: hello-world
 spec:
