--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -4,6 +4,7 @@ metadata:
   labels:
     app: nginx
   name: nginx-deployment
+  namespace: '${ parameters.namespace }'
 spec:
   replicas: '${ parameters.replicacount }'
   selector:
