--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -6,7 +6,7 @@ metadata:
   name: hello-world-deployment
   namespace: '${ parameters.namespace }'
 spec:
-  replicas: '${ parameters.replicacount }'
+  replicas: '${ #toInt( parameters.replicacount) }'
   selector:
     matchLabels:
       app: hello-world
