--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -20,3 +20,6 @@ spec:
           name: hello-world
           ports:
             - containerPort: 80
+          envFrom:
+            - configMapRef:
+                name: hello-world-config
