removed parameters prefix

--- a/manifests/configmap.yml
+++ b/manifests/configmap.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: hello-world-config
-  namespace: '${ parameters.namespace }'
+  namespace: '${ namespace }'
 data:
   bgcolor: yellow
   fgcolor: black
