--- a/manifests/service.yml
+++ b/manifests/service.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: hello-world
-  namespace: '${ namespace }'
+  namespace: '${ execution.namespace }'
   labels:
     app: hello-world
 spec:
