Changed color and testing variable name resolution again

--- a/manifests/configmap.yml
+++ b/manifests/configmap.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: hello-world-config
-  namespace: ${ namespace }
+  namespace: '${ namespace }'
 data:
   bgcolor: yellow
-  fgcolor: black
+  fgcolor: blue
