--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -4,9 +4,9 @@ metadata:
   labels:
     app: hello-world
   name: hello-world-deployment
-  namespace: '${ execution.namespace }'
+  namespace: ${ parameters.namespace }
 spec:
-  replicas: '${ #toInt( execution.replicacount) }'
+  replicas: ${ #toInt( parameters.replicacount) }
   selector:
     matchLabels:
       app: hello-world
