Added healthcheck definition

--- a/service/Dockerfile
+++ b/service/Dockerfile
@@ -9,4 +9,6 @@ RUN ls /app
 
 EXPOSE 80
 
+HEALTHCHECK --interval=5m --timeout=5s CMD curl -f http://localhost:80/ || exit 1
+
 ENTRYPOINT ["python", "/app/hello.py"]
