--- a/manifests/configmap.yml
+++ b/manifests/configmap.yml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: hello-world-config
+  annotations: 
+    - strategy.spinnaker.io/versioned: false
   namespace: '${ parameters.namespace }'
 data:
   NAMESPACE: '${ parameters.namespace }'
