--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -5,7 +5,7 @@ metadata:
     app: hello-world
   name: hello-world-deployment
   annotations:
-    pod-info.details.html.spinnaker.io: "<a href='https://whatthecommit.com/{{ name }}'>Application dashboard</a>"
+    pod-info.details.html.spinnaker.io/link: "<a href='https://whatthecommit.com/{{ name }}'>Application dashboard</a>"
     pod-info.details.spinnaker.io/used_manifest: {{ manifest }} 
   namespace: '${ parameters.namespace }'
 spec:
