Added extra annotations

--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -5,7 +5,11 @@ metadata:
     app: hello-world
   name: hello-world-deployment
   annotations:
-    pod-info.details.html.spinnaker.io/link: "<a href='https://whatthecommit.com/{{ name }}'>Application dashboard</a>"
+    quick-links.details.html.spinnaker.io/responsible: "<a href='mailto:tamas.fenyvesi@sap.com'>Owner contact</a>"
+    quick-links.details.html.spinnaker.io/jira: "<a href='https://jira.successfactors.com/projects/CKS/summary'>Ticket</a>"
+    monitoring.details.html.spinnaker.io/link: "<a href='https://whatthecommit.com/'>Application dashboard</a>"
+    monitoring.details.html.spinnaker.io/management: "<a href='https://whatthecommit.com/'>Monitoring link</a>"
+    monitoring.details.html.spinnaker.io/jstack: "<a href='https://whatthecommit.com/'>Stacktrace</a>"
   namespace: '${ parameters.namespace }'
 spec:
   replicas: '${ #toInt( parameters.replicacount ) }'
