Change background color to green

--- a/manifests/configmap.yml
+++ b/manifests/configmap.yml
@@ -7,5 +7,5 @@ metadata:
   namespace: '${ parameters.namespace }'
 data:
   NAMESPACE: '${ parameters.namespace }'
-  bgcolor: black
+  bgcolor: green
   fgcolor: blue
