--- a/manifests/service.yml
+++ b/manifests/service.yml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: hello-world
+  annotations:
+    attempt.details.html.spinnaker.io/number: 1
   namespace: '${ parameters.namespace }'
   labels:
     app: hello-world
