--- a/manifests/configmap.yml
+++ b/manifests/configmap.yml
@@ -3,7 +3,7 @@ kind: ConfigMap
 metadata:
   name: hello-world-config
   annotations: 
-    strategy.spinnaker.io/versioned: 'false'
+    strategy.spinnaker.io/versioned: 'true'
     attempt.details.html.spinnaker.io/number: 1
   namespace: '${ parameters.namespace }'
 data:
