--- a/kubernetes-manifests/simple_stateless_service/configmap.yml
+++ b/kubernetes-manifests/simple_stateless_service/configmap.yml
@@ -8,5 +8,5 @@ metadata:
   namespace: '${ parameters.namespace }'
 data:
   NAMESPACE: '${ parameters.namespace }'
-  bgcolor: green
-  fgcolor: blue
+  bgcolor: white
+  fgcolor: black
