--- a/helm-charts/helloworld/templates/service.yaml
+++ b/helm-charts/helloworld/templates/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "helloworld.fullname" . }}
+  namespace: test
   labels:
 {{ include "helloworld.labels" . | indent 4 }}
 spec:
