--- a/helm-charts/helloworld/templates/configmap.yaml
+++ b/helm-charts/helloworld/templates/configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: hello-world-config
+  name: helm-hello-world-config
   annotations: 
     strategy.spinnaker.io/versioned: 'true'
     attempt.details.html.spinnaker.io/number: 1
