--- a/helm-charts/helloworld/templates/deployment.yaml
+++ b/helm-charts/helloworld/templates/deployment.yaml
@@ -21,17 +21,20 @@ spec:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          envFrom:
+            - configMapRef:
+                name: helm-hello-world-config
           ports:
             - name: http
               containerPort: 80
               protocol: TCP
           livenessProbe:
             httpGet:
-              path: /
+              path: /hello
               port: http
           readinessProbe:
             httpGet:
-              path: /
+              path: /hello
               port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
