--- a/helm-charts/helloworld/templates/deployment.yaml
+++ b/helm-charts/helloworld/templates/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ include "helloworld.fullname" . }}
-  namespace: {{ .Release.Namepsace }}
+  namespace: {{ Release.Namepsace }}
   labels:
 {{ include "helloworld.labels" . | indent 4 }}
 spec:
