Container image reference modified to project/image format
In spinnaker the docker image artifacts was not inlined. Trying a different form.

--- a/kubernetes-manifests/simple_stateless_service/replicaset.yml
+++ b/kubernetes-manifests/simple_stateless_service/replicaset.yml
@@ -23,8 +23,8 @@ spec:
         app: hello-world
     spec:
       containers:
-        - image: hello-world-image
-          name: hello-world
+        - name: hello-world
+          image: ftamas/hello_world_service
           ports:
             - containerPort: 80
           envFrom:
